Fix headshot on mobile v2

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -389,7 +389,7 @@ footer {
 
 @media screen and (max-width: 420px) {
   .hero img {
-    height: 30rem;
+    height: 23rem;
     width: 23rem;
   }
 
